[package]
name = "octrap"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-logging2 = "2.0.4"
rocket = "0.4.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
